--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,12 +34,14 @@ body {
   width: 100%;
 }
 .counter-food{
-  background-color: yellow;
-  float: left;
-}
-.counter-drink{
   background-color: #e0ffe6;
   float: left;
+  width: 100%;
+}
+.counter-drink{
+  background-color: yellow;
+  float: left;
+  width: 100%;
 }
 
 
