--- a/src/app/root.html
+++ b/src/app/root.html
@@ -10,6 +10,46 @@
         <bindtocontroller count="watcher.count"></bindtocontroller>
       </div>
 
+      <div class="component-box"> <br/>
+        <h2>Single Slot, Manual, and Multi-slot transclusion</h2> <br/>
+        <h3>Single Slot transclusion</h3>
+        <!-- Alternatively, we could have done this with property binding, which could have required name
+          and desc to be passed as attributes and could get messy -->
+        <ng-transclusion> <!-- The goal is to inject the contents of this directive into the  ng-transclude property element -->
+          <h4>Tom Delonge</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+        </ng-transclusion>
+
+        <ng-transclusion>
+          <h4>Mark Hopus</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+        </ng-transclusion>
+
+        <ng-transclusion>
+          <h4>Travis Barker</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+        </ng-transclusion>
+      </div>
+
+      <div class="component-box"> <br/>
+        <h2>Single Slot, Manual, and Multi-slot transclusion</h2> <br/>
+        <h3>Multi Slot Transclusion</h3>
+          <multi-slot-transclude>
+            <h4>Tom Delonge</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+          </multi-slot-transclude>
+
+          <multi-slot-transclude>
+            <h4>Mark Hopus</h4>
+
+          </multi-slot-transclude>
+
+          <multi-slot-transclude>
+            <h4>Travis Barker</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+          </multi-slot-transclude>
+      </div>
+
   </div>
 
   <div class="right-column">
@@ -17,6 +57,36 @@
       <div class="component-box">
         <observe-attributes name="{{watcher.name}}"></observe-attributes>
       </div>
+
+      <div class="component-box" ng-controller="CompileLinkErrorController as errCtrl">
+        <h2>Directive compile vers link functions, toggle class name.</h2>
+        <div ng-repeat="error in errCtrl.list" compile-link-directive type="{{ error.type }}">
+          {{error.message}}
+        </div>
+      </div>
+
+    <div class="component-box"> <br/>
+      <h2>Single Slot, Manual, and Multi-slot transclusion</h2> <br/>
+
+      <h3>Manual Transclusion</h3>
+      <!-- Alternatively, we could have done this with property binding, which could have required name
+	            and desc to be passed as attributes and could get messy -->
+      <!-- The goal is to inject the contents of this directive into the  ng-transclude property element -->
+      <manual-transclude>
+        <h4>Tom Delonge</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+      </manual-transclude>
+
+      <manual-transclude>
+        <h4>Mark Hopus</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+      </manual-transclude>
+
+      <manual-transclude>
+        <h4>Travis Barker</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adisplicing elitus</p>
+      </manual-transclude>
+    </div>
 
   </div>
 </div>
