--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -60,11 +60,11 @@ body {
   text-align: center;
 }
 
-.error-warning{
+.error__warning{
   border-color: solid 1px red;
 }
 
-.error-invalid{
+.error__invalid{
   border-color: solid 1px green;
 }
 
@@ -91,6 +91,41 @@ root .loader {
   text-align: center;
   font-weight: 900;
 }
+
+
+/*--------  Styles for the tabs  ------------*/
+.tabs__list{
+  width: 100%;
+  li{
+    width: 33.33335%;
+    float: left;
+    border: solid 1px #ccc;
+    text-align: center;
+    border-radius: 10px 0 0 0;
+    a{
+      display: block;
+    }
+  }
+  li:hover{
+    background-color: #e3ecfa;
+  }
+}
+
+.tabs__content{
+  clear: both;
+  border: solid 1px #ccc;
+  border-top: none;
+  background-color: #fef6f3;
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: center;
+}
+.selectedtab{
+  background-color: #fef6f3;
+  border-bottom: solid 1px #fef6f3 !important;
+}
+/*--------  Styles for the tabs end ------------*/
 
 /**
  * header
