Added a tab component created with the angular component.

--- a/src/app/root.html
+++ b/src/app/root.html
@@ -103,9 +103,26 @@
         </div>
       </div>
     </div>
-
-
     <!-- .............. component .................... -->
+
+    <div class="component-box">
+      <h2>Tabs with Angular Components</h2> <br/>
+      <components-tab>
+        <component-tab label="Tab 1">
+          Tab 1 Content
+        </component-tab>
+
+        <component-tab label="Tab 2">
+          Tab 2 Content
+        </component-tab>
+
+        <component-tab label="Tab 3">
+          Tab 3 Content
+        </component-tab>
+
+      </components-tab>
+    </div>
+  </div>
   </div>
   <!-- *********************** LEFT COLUMN ENDS ************************************************** -->
 
@@ -153,7 +170,7 @@
 
     <!-- .............. component .................... -->
     <div class="component-box">
-      <h2>Tabs with Angular</h2> <br/>
+      <h2>Tabs with Angular Directives</h2> <br/>
       <tabs>
         <tab label="One">
           Tab One Content
@@ -168,8 +185,6 @@
         </tab>
       </tabs>
     </div>
-
-
   </div>
   <!-- *********************** RIGHT COLUMN ENDS ************************************************** -->
 </div>
