--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -93,7 +93,7 @@ root .loader {
 }
 
 
-/*--------  Styles for the tabs  ------------*/
+/*--------  Styles for the componentsTab  ------------*/
 .tabs__list{
   width: 100%;
   li{
@@ -125,7 +125,7 @@ root .loader {
   background-color: #fef6f3;
   border-bottom: solid 1px #fef6f3 !important;
 }
-/*--------  Styles for the tabs end ------------*/
+/*--------  Styles for the componentsTab end ------------*/
 
 /**
  * header
