Light modification was made to the Tabs component.

--- a/src/app/root.html
+++ b/src/app/root.html
@@ -107,6 +107,10 @@
 
 
       <!-- .............. component .................... -->
+      <div class="component-box"> <br/>
+        <on-changes-hook></on-changes-hook>
+      </div>
+
     </div>
     <!-- *********************** LEFT COLUMN ENDS ************************************************** -->
 
