Created a custom filter and filterDemo component to use the custom filter.

--- a/src/app/root.html
+++ b/src/app/root.html
@@ -107,12 +107,16 @@
 
 
       <!-- .............. component .................... -->
-      <div class="component-box"> <br/>
+      <div class="component-box">
+        <h2>Stateless component with $onChanges</h2> <br/>
         <on-changes-hook></on-changes-hook>
       </div>
 
-    </div>
-    <!-- *********************** LEFT COLUMN ENDS ************************************************** -->
+
+
+
+    </div><!-- *********************** LEFT COLUMN ENDS ************************************************** -->
+
 
 
 
@@ -193,8 +197,14 @@
       </div>
 
 
-    </div>
-    <!-- *********************** RIGHT COLUMN ENDS ************************************************** -->
+      <!-- .............. component .................... -->
+      <div class="component-box">
+        <filter-demo></filter-demo>
+      </div>
+
+
+    </div><!-- *********************** RIGHT COLUMN ENDS ************************************************** -->
+
   </div>
 
 </div>
