Added a component to demonstrate component input-output.

--- a/src/app/root.html
+++ b/src/app/root.html
@@ -112,8 +112,11 @@
         <on-changes-hook></on-changes-hook>
       </div>
 
-
-
+      <!-- .............. component .................... -->
+      <div class="component-box inpt-oupt">
+        <h1>Component Input - Output Demo </h1>
+        <input-output-demo></input-output-demo>
+      </div>
 
     </div><!-- *********************** LEFT COLUMN ENDS ************************************************** -->
 
