--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -147,6 +147,18 @@ ul.genderfilter{
 }
 /*--------  Styles for gender filter end ------------*/
 
+/*--------  Styles for component input-output demo ------------*/
+.inpt-oupt{
+  .inpt-oupt-box{
+    width: 170px;
+    float: left;
+    padding: 10px;
+    border: solid 1px green;
+    overflow: hidden;
+    margin-top: 10px;
+  }
+}
+/*--------  Styles for component input-output demo ------------*/
 
 /**
  * header
