--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -92,6 +92,32 @@ root .loader {
   font-weight: 900;
 }
 
+/*--------  Nav bar styles  ------------*/
+.simple-nav{
+  width: 100%;
+  margin: 10px 0;
+  .nav-bar{
+    width: 50%;
+    max-width: 600px;
+    margin: 0 auto;
+    li{
+      width: 33.3333336%;
+      float: left;
+      background-color: #c0ebf8;
+      border: solid 1px #a9a9a9;
+      text-align: center;
+      padding: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      a{
+        display: block;
+      }
+    }
+  }
+}
+
+/*--------  Nav bar styles  ------------*/
+
 
 /*--------  Styles for the tabs  ------------*/
 .tabs__list{
