Added a demo for create read update delete.

--- a/src/app/routComponents/httpRoute/httpRoute.html
+++ b/src/app/routComponents/httpRoute/httpRoute.html
@@ -6,6 +6,13 @@
 <div class="left-column">
 
 
+  <!-- .............. component .................... -->
+  <div class="component-box"  ng-controller="RootController as watcher">
+    <h2>HTTP CRUD Demo</h2>
+    <to-do-component></to-do-component>
+  </div>
+
+
 </div>
 
 
@@ -17,9 +24,7 @@
 <!-- *****************************************************   Right Column ********************************** -->
 <!-- ******************************************************************************************************* -->
 
-
-
-
 <div class="right-column">
-  
+
+
 </div>
